--- a/src/fatec/alg/gui/FrmListaErros.form
+++ b/src/fatec/alg/gui/FrmListaErros.form
@@ -51,10 +51,9 @@
         <Component class="javax.swing.JTable" name="tblErros">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="0">
+              <Table columnCount="3" rowCount="0">
                 <Column editable="false" title="Tipo" type="java.lang.Object"/>
-                <Column editable="false" title="Linha" type="java.lang.Object"/>
-                <Column editable="false" title="Coluna" type="java.lang.Object"/>
+                <Column editable="false" title="Posi&#xe7;&#xe3;o" type="java.lang.Object"/>
                 <Column editable="false" title="Mensagem" type="java.lang.Object"/>
               </Table>
             </Property>
