--- a/src/fatec/alg/gui/FrmSobre.form
+++ b/src/fatec/alg/gui/FrmSobre.form
@@ -157,7 +157,7 @@
           <Color blue="ff" green="0" red="0" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Projeto hospedado em ENDERECO"/>
+        <Property name="text" type="java.lang.String" value="Projeto hospedado em "/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Hand Cursor"/>
         </Property>
